[package]
name = "cm-telemetry"
version = "2.3.1"
authors = ["Oscar Moreno <oscarmg99@gmail.com>"]
repository = "https://github.com/ozkar99/cm-telemetry"
readme = "README.md"
description = "Implementation of the telemetry UDP protocol for codemasters (and friends) games"
license = "MIT"
edition = "2018"

[dependencies]
num = { version="0.4", optional=true}
num_enum = { version="0.5", optional=true}
binread = { version="2.2", optional=true}
byteorder = { version="1", optional=true}
bitflags = { version="1.3.2", optional=true}

[features]
dirt = []
dirt-rally-2 = ["dirt", "byteorder"]
dirt-all = ["dirt", "dirt-rally-2"]

f1 = ["num", "num_enum", "binread"]
f1-2020 = ["f1"]
f1-2022 = ["f1", "bitflags"]
f1-all = ["f1", "f1-2020", "f1-2022"]