[package]
name = "cm-telemetry"
version = "2.3.1"
authors = ["Oscar Moreno <oscarmg99@gmail.com>"]
repository = "https://github.com/ozkar99/cm-telemetry"
readme = "README.md"
description = "Implementation of the telemetry UDP protocol for codemasters (and friends) games"
license = "MIT"
edition = "2018"

[dependencies]
num = { version="0.4", optional=true}
num_enum = { version="0.6.1", optional=true}
binread = { version="2.2", optional=true}
byteorder = { version="1", optional=true}
bitflags = { version="2.2.1", optional=true}

cfg-if = "1.0.0"
tokio = { version = "1.25.0", optional = true }

[features]
default = []
async = ["dep:tokio", "tokio?/net"]
async_example = ["async", "tokio?/rt", "tokio?/macros", "tokio?/time"]

dirt = []
dirt-rally-2 = ["dirt", "byteorder"]
dirt-all = ["dirt", "dirt-rally-2"]

f1 = ["num", "num_enum", "binread"]
f1-2020 = ["f1"]
f1-2022 = ["f1", "bitflags"]
f1-all = ["f1", "f1-2020", "f1-2022"]

[[example]]
name = "dirt"
required-features = ["dirt-rally-2"]

[[example]]
name = "f1_2020"
required-features = ["f1-2020"]

[[example]]
name = "f1_2022"
required-features = ["f1-2022"]

[[example]]
name = "async_f1_2020"
required-features = ["async_example", "f1-2020"]